# Magma-Engine-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Example/: CMakeLists.txt  Example.cpp
src/Magma/: CMakeLists.txt  Environment.cpp  Environment.hpp  Exception.cpp  Exception.hpp  Globals.cpp  Globals.hpp  Locator.hpp  Magma.cpp  Magma.hpp  Serializable.hpp  StringID.cpp  StringID.hpp
src/Magma/Memory/: Allocator.cpp  Allocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp
src/Magma/Parsers/: CSVDocument.cpp  CSVDocument.hpp  Exception.hpp  INIDocument.cpp  INIDocument.hpp  ParserException.hpp  String.cpp  String.hpp  XMLDocument.cpp  XMLDocument.hpp
src/Magma/Parsing/: CSVDocument.cpp  CSVDocument.hpp  INIDocument.cpp  INIDocument.hpp
src/Magma/Systems/Console/: Console.hpp
